shadows, joi button

--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -160,6 +160,7 @@
 		--hover-background: /*[[hoverBackground]]*/;
 		--main-text: /*[[mainText]]*/;
 		--dimmer-text: /*[[dimmerText]]*/;
+		--shadow: 0 1px 0.5px rgba(0, 0, 0, .13);
 
 		/*DeepDark colors*/
 		/*
@@ -939,7 +940,7 @@
 	/*TODO: forgot to test if the [dialog] is even needed*/
 	{
 		background-color: var(--hover-background) !important;
-		box-shadow: 0 1px 0.5px rgba(0, 0, 0, .13); /*TODO: move to --shadow*/
+		box-shadow: var(--shadow) !important;
 	}
 	#header.ytd-single-option-survey-renderer,
 	#header.ytd-survey-follow-up-renderer
@@ -959,7 +960,7 @@
 	yt-tooltip-renderer
 	{
 		background-color: var(--main-background) !important;
-		box-shadow: 0 1px 0.5px rgba(0, 0, 0, .13); /*TODO: move to --shadow*/
+		box-shadow: var(--shadow) !important;
 	}
 	yt-tooltip-renderer[position-type="OPEN_POPUP_POSITION_BOTTOMLEFT"]::before
 	{
@@ -969,7 +970,7 @@
 	/*Join button tooltip*/
 	yt-bubble-hint-renderer[style_="BUBBLE_HINT_STYLE_BLUE_TOOLTIP"]
 	{
-		box-shadow: 0 1px 0.5px rgba(0, 0, 0, .13); /*TODO: move to --shadow*/
+		box-shadow: var(--shadow) !important;
 	}
 	yt-bubble-hint-renderer[position-type="OPEN_POPUP_POSITION_LEFT"][style_="BUBBLE_HINT_STYLE_BLUE_TOOLTIP"]::before
 	{
@@ -1056,7 +1057,7 @@
 	paper-button.ytd-subscribe-button-renderer,.ytp-sb-subscribe,
 	a.ytp-sb-subscribe, ytd-subscribe-button-renderer:not([button-style]) paper-button:not([subscribed]),
 	#button[class="style-scope ytd-button-renderer style-compact-gray"],
-	ytd-button-renderer.style-suggestive[is-paper-button] paper-button.ytd-button-renderer,
+	ytd-button-renderer.style-suggestive[is-paper-button] paper-button.ytd-button-renderer, /*join button*/
 	ytd-button-renderer.style-compact-gray[is-paper-button] paper-button.ytd-button-renderer
 	{
 		background-color: var(--main-color) !important;
@@ -1068,17 +1069,21 @@
 	.ytp-sb-subscribe, a.ytp-sb-subscribe:hover,.ytp-sb-unsubscribe:hover,
 	ytd-subscribe-button-renderer:not([button-style]) paper-button:not([subscribed]):hover,
 	#button[class="style-scope ytd-button-renderer style-compact-gray"]:hover,
-	ytd-button-renderer.style-suggestive[is-paper-button] paper-button.ytd-button-renderer:hover,
+	ytd-button-renderer.style-suggestive[is-paper-button] paper-button.ytd-button-renderer:hover, /*join button*/
 	ytd-button-renderer.style-compact-gray[is-paper-button] paper-button.ytd-button-renderer:hover
 	{
 		filter: brightness(110%) !important;
 	}
-	paper-button.ytd-subscribe-button-renderer[subscribed],.ytp-sb-unsubscribe
+	paper-button.ytd-subscribe-button-renderer[subscribed], .ytp-sb-unsubscribe
 	{
 		background-color: var(--second-background) !important;
 		color: var(--main-text) !important;
 		opacity: 0.9 !important;
-		box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2)  !important;
+		box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2) !important;
+	}
+	ytd-button-renderer.style-suggestive[is-paper-button] paper-button.ytd-button-renderer /*join button*/
+	{
+		box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2) !important;
 	}
 	ytd-button-renderer.style-primary[is-paper-button]
 	{
