--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Material
 @namespace gitlab.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://gitlab.com/RaitaroH/YouTube-DeepDark
-@version 3.1.8
+@version 3.1.9
 @updateURL https://gitlab.com/RaitaroH/YouTube-DeepDark/raw/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -704,6 +704,11 @@
 	}
 	/*views*/
 	span.yt-view-count-renderer
+	{
+		color: var(--dimmer-text) !important;
+	}
+	/*published date*/
+	#date.ytd-video-primary-info-renderer
 	{
 		color: var(--dimmer-text) !important;
 	}
